// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gilded Rose should do a snapshot for 2 days 1`] = `
Array [
  Object {
    "daysLeftToSell": 0,
    "name": "Aged Brie",
    "quality": 2,
  },
  Object {
    "daysLeftToSell": 0,
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
  },
  Object {
    "daysLeftToSell": -1,
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
  },
  Object {
    "daysLeftToSell": 13,
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 22,
  },
  Object {
    "daysLeftToSell": 8,
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 50,
  },
  Object {
    "daysLeftToSell": 3,
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 50,
  },
]
`;

exports[`Gilded Rose should do a snapshot for 10 days 1`] = `
Array [
  Object {
    "daysLeftToSell": -8,
    "name": "Aged Brie",
    "quality": 18,
  },
  Object {
    "daysLeftToSell": 0,
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
  },
  Object {
    "daysLeftToSell": -1,
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
  },
  Object {
    "daysLeftToSell": 5,
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 35,
  },
  Object {
    "daysLeftToSell": 0,
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 50,
  },
  Object {
    "daysLeftToSell": -5,
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
  },
]
`;
